k8s/user-mgmt-service/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: user-mgmt
  labels:
    name: user-mgmt
