k8s/user-mgmt-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-mgmt-service
  namespace: user-mgmt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-mgmt-service
  template:
    metadata:
      labels:
        app: user-mgmt-service
    spec:
      containers:
        - name: app
          image: ghcr.io/nschwinning/user-mgmt-service:PLACEHOLDER
          ports:
            - containerPort: 8080

          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3

          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 3
