k8s/user-mgmt-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-mgmt-service
  namespace: user-mgmt
spec:
  selector:
    app: user-mgmt-service
  ports:
    - port: 80
      targetPort: 8080
